feat: Refactor Warehouse Service and Controller for enhanced DTO usage and security
- Updated WarehouseService interface and implementation to use DTOs for Floor, Aisle, and Shelf operations.
- Added methods for creating, updating, and deleting Floors, Aisles, and Shelves with proper authorization checks.
- Introduced new DTO classes: AisleDTO, FloorDTO, and ShelfDTO for better data handling.
- Removed deprecated exception classes for Aisle and Floor not found scenarios.
- Enhanced Aisle and Floor repositories with additional query methods.
- Updated WarehouseV1Controller to reflect changes in service methods and added Swagger annotations for API documentation.
- Improved validation in DTOs for required fields and constraints.
- Adjusted application configuration for database schema management.